Deployments/blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  labels:
    app: lab
    tier: frontend
spec:

  replicas: 6
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: blue
        image: nginx
        resources:
          requests:
            memory: "1G"
