Deployments/daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: elasticsearch
  labels:
    app: test
    type: new-app
  namespace: kube-system
spec:

  template:
    metadata:
      labels:
        tier: frontend

    spec:
      containers:
        - image: k8s.gcr.io/fluentd-elasticsearch:1.20
          name: elasticsearch
  selector:
    matchLabels:
      tier: frontend
