Deployments/deploy1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changeme
  labels:
    app:
    tier:
spec:

  replicas: 3
  selector:
    matchLabels:
      tier:
  template:
    metadata:
      labels:
        tier:
    spec:
      containers:
        - name:
          image:
