Deployments/pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: fred-app
  labels:
    team: eng
    reg: US
    name: fred-app

spec:
  containers:
    - name: web
      image: nginx
