Deployments/redis.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    team: eng
    reg: US
    name: fred-app

spec:
  containers:
    - name: redis
      image: redis123
