Deployments/size.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: size
  labels:
    app: test
    tier: solo
spec:

  replicas: 2
  selector:
    matchLabels:
      tier: solo
  template:
    metadata:
      labels:
        tier: solo
    spec:
      containers:
      - name: solo
        image: nginx
        resources:
          requests:
            memory: "1G"
