Deployments/yelp.yml

apiVersion: v1
kind: Service
metadata:
  name: redis-server
  labels:
    app: redis-server
    tier: cache
spec:
  type: ClusterIP
  ports:
  - port: 6379
  selector:
    app: redis-server
    tier: cache
---
apiVersion: v1
kind: Service
metadata:
  name: yelb-db
  labels:
    app: yelb-db
    tier: backenddb
spec:
  type: ClusterIP
  ports:
  - port: 5432
  selector:
    app: yelb-db
    tier: backenddb
---
apiVersion: v1
kind: Service
metadata:
  name: yelb-appserver
  labels:
    app: yelb-appserver
    tier: middletier
spec:
  type: ClusterIP
  ports:
  - port: 4567
  selector:
    app: yelb-appserver
    tier: middletier
---
apiVersion: v1
kind: Service
metadata:
  name: yelb-ui
  labels:
    app: yelb-ui
    tier: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: yelb-ui
    tier: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: yelb-lb-service
spec:
  selector:
    app: yelb-ui
    tier: frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yelb-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: yelb-ui
  template:
    metadata:
      labels:
        app: yelb-ui
        tier: frontend
        appstack: yelb
    spec:
      containers:
      - name: yelb-ui
        image: mreferre/yelb-ui:0.5
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-server
  template:
    metadata:
      labels:
        app: redis-server
        tier: cache
        appstack: yelb
    spec:
      containers:
      - name: redis-server
        image: redis
        ports:
        - containerPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yelb-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yelb-db
  template:
    metadata:
      labels:
        app: yelb-db
        tier: backenddb
        appstack: yelb
    spec:
      containers:
      - name: yelb-db
        image: mreferre/yelb-db:0.5
        ports:
        - containerPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yelb-appserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yelb-appserver
  template:
    metadata:
      labels:
        app: yelb-appserver
        tier: middletier
        appstack: yelb
    spec:
      containers:
      - name: yelb-appserver
        image: mreferre/yelb-appserver:0.5
        ports:
        - containerPort: 4567
