Deployments/tanzu_nwk_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuard-networkpolicy
  namespace: kuard-ns
spec:
  podSelector:
    matchLabels:
      app: kuard
  policyTypes:
  - Egress
